Added more codes

--- a/index.html
+++ b/index.html
@@ -35,10 +35,15 @@
                 one year. I learned UI/UX Design in a short-term 
                 program and am currently engaged in coding.
             </p>
-     </div>
+     
 
      <div class="btn-box">
               <button class="btn-1">Download CV</button>
+     </div>
+     </div>
+     <div class="img-box">
+        <img src="https://img.freepik.com/premium-photo/young-software-developer-ai-generated_1059430-18874.jpg"
+          alt="img.jpg">
      </div>
    </section>
 </body>
