Create About page

--- a/index.html
+++ b/index.html
@@ -46,5 +46,25 @@
           alt="img.jpg">
      </div>
    </section>
+
+   <section class="about">
+    <div class="about-img">
+    <img src="https://img.freepik.com/premium-photo/young-software-developer-ai-generated_1059430-18874.jpg"
+     alt="img.jpg">
+     </div>
+
+     <div class="about-contact">
+        <h2 class="heading">About <span>Me</span></h2>
+        <h3>A UI/UX Designer <span>and Junior Developer</span></h3>
+          <p>My name is Rohina Nazari. I have completed one year of university studies 
+          and have participated in a short-term program in UI/UX Design. 
+          Currently, I am focused on coding and expanding my skills in this field. 
+          I am passionate about learning and constantly looking for opportunities to grow 
+          both personally and professionally.
+          </p>
+          
+        <a href="#" class="btn-1">Download CV</a>
+       </div>
+     </section>
 </body>
 </html>
